--- a/1/index.html
+++ b/1/index.html
@@ -1,1 +1,9 @@
 <h1>Bello!</h1>
+<p>Junk for wget</p>
+<a href="install.sh"></a>
+<a href="LICENSE"></a>
+<a href="jarvis-main.js"></a>
+<a href="uninstall.sh"></a>
+<a href="update.sh"></a>
+<a href="version.txt"></a>
+<a href="upgrade.sh"></a>
