--- a/1/index.html
+++ b/1/index.html
@@ -1,9 +1,9 @@
 <h1>Bello!</h1>
 <p>Junk for wget</p>
-<a href="install.sh"></a>
-<a href="LICENSE"></a>
-<a href="jarvis-main.js"></a>
-<a href="uninstall.sh"></a>
-<a href="update.sh"></a>
-<a href="version.txt"></a>
-<a href="upgrade.sh"></a>
+<a href="install.sh">First some junk</a><br>
+<a href="LICENSE">Then some junk</a><br>
+<a href="jarvis-main.js">Next some junk</a><br>
+<a href="uninstall.sh">By now you're thinking: How much junk does wget need?!</a><br>
+<a href="update.sh">So we'll add some junk</a><br>
+<a href="version.txt">Finally, add some junk</a><br>
+<a href="upgrade.sh">And when you weren't looking: I added some junk!</a>
